--- a/index.html
+++ b/index.html
@@ -13,37 +13,44 @@
     <div class="container">
 
       <div class="card-white" id="introduction">
-        <h1>Hi, I'm Borat 😎</h1>
-        <img src="images/profile.jpg" width="150px" alt="Lucas Rizzo">
+        <h1>Hi, I'm Lucas ! 👋 </h1>
+        <div>
+            <img src="images/profile.png" width="150px" alt="Lucas Rizzo">
+        </div>
+        <div class="logo-kedge">
+            <img src="images/KEDGE.png" width="150px" alt="Logo KEDGE">
+        </div>
         <p>
-          I come from Kazakstan.
+            <strong>Master 1 "Marketing and brand management" at Kedge Business School Marseille.</strong> 
+        </p>
+        <p>
+            My curriculum has allowed me to acquire solid knowledge in the field of </strong>Business and Management</strong> that I have already been able to put into practice during my internship at the end of my bachelor's degree in a sports hall as a communication officer but also as an organizer of the French Mountain Bike Cup in Marseille and lifeguard during the summer periods for 3 years, being head of post on the last season '2020'. These different experiences have allowed me to develop relational and managerial skills and to acquire a certain versatility.
         </p>
         <a href="documents/cv-lucas-rizzo.pdf" class="btn-blue" target="_blank">Look at my resume</a>
       </div>
 
       <div class="card-white">
-        <h2>UX/UI Design 📐</h2>
+        <h2>Sport Lover 🏊‍♂️</h2>
         <p>
-          I am passionate about <strong>UX/UI Design</strong>.
+          I am passionate about <strong>Sport</strong>. I have been swimming since I was a child and my studies have allowed me to become a specialist in the sport. 
         </p>
+
       </div>
 
       <div class="card-white">
-        <h2>Frontend Development 💻</h2>
+        <h2>Video Editing 📹 </h2>
         <p>
-          I am passionate about <strong>Frontend Development</strong>.
+            I love directing and editing videos.
         </p>
-      </div>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_szgfms5plo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+       </div>
+
+      
 
       <div class="card-white">
-        <h2>Motorbikes 🏍️</h2>
-        <p>
-          I am passionate about <strong>Motorbikes</strong>.
-        </p>
-      </div>
-
-      <div class="card-white">
-        <h2>Follow me</h2>
+        <h2>Let's connect !</h2>
         <ul class="list-inline">
           <li>
             <a href="https://github.com/Lucasrzo" target="_blank">
@@ -57,7 +64,16 @@
           </li>
         </ul>
       </div>
+
     </div>
+
+        <div id="footer">
+            <h2>Contact </h2>
+            <p>
+                📞 : 06.43.68.72.86
+            </p>
+            <p>📧: lucas.rizzo@kedgebs.com </p>
+        </div>
 
   </body>
 </html>
